isolated dohyo, enhanced effects

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -427,6 +427,20 @@ body {
   z-index: 0;
 }
 
+.dohyo-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url(./assets/dohyo.png);
+  background-repeat: no-repeat;
+  background-size: 120% 120%;
+  background-position: 52% 5%;
+  pointer-events: none;
+  z-index: 1;
+}
+
 @media (min-aspect-ratio: 16/9) {
   .game-container {
     width: calc(100vh * 16 / 9);
@@ -856,7 +870,7 @@ body {
   bottom: 40%;
   width: 23.4%;
   height: auto;
-  z-index: -1;
+  z-index: 2;
   pointer-events: none;
   transform-origin: center bottom;
 }
